@@ -7,9 +7,10 @@
 [![license](https://img.shields.io/github/license/Morichan/Retuss.svg)](LICENSE)
 
 [![Java version](https://img.shields.io/badge/java-9+-4c7e9f.svg)](https://www.java.com/en/)
-[![JUnit version](https://img.shields.io/badge/junit-5+-dc524a.svg)](http://junit.org/junit5/)
+[![JUnit version](https://img.shields.io/badge/junit-5+-dc524a.svg)](https://junit.org/junit5/)
 [![Gradle version](https://img.shields.io/badge/gradle-4.4+-007042.svg)](https://gradle.org/docs/)
-[![ANTLR version](https://img.shields.io/badge/antlr-4+-ec312e.svg)](http://junit.org/junit5/)
+[![ANTLR version](https://img.shields.io/badge/antlr-4+-ec312e.svg)](http://www.antlr.org/)
+[![ANTLR version](https://img.shields.io/badge/fescue-2+-00dc00.svg)](https://github.com/Morichan/fescue/)
 
 [![GitHub tag](https://img.shields.io/github/tag/Morichan/Retuss.svg)](https://github.com/Morichan/Retuss/tags)
 [![GitHub release](https://img.shields.io/github/release/Morichan/Retuss/all.svg)](https://github.com/Morichan/Retuss/releases)
@@ -34,8 +35,6 @@ __RETUSS__ (Real-time Ensure Traceability between UML and Source-code System) �
 ## 注意点
 
 * テストコードのコンパイル時には `-Djdk.attach.allowAttachSelf` システムプロパティを追加してください。
-* TestFX内（正確には testfx-core-4.0.8-alpha.jar における `org.testfx.toolkit.impl.ToolkitServiceImpl` メソッド）で `--illegal-access` エラーを起こしますが、2017/11/10現在のJava9では特に問題ありません。
-  そのうち使えなくなるかもしれませんが、それより前にTestFXが対応してくれると信じましょう。
 * ビルドする際にTestFXによるGUIテストを実行するため、マウスなどを動かさないようにしてください。
 * JMockitは他のライブラリと比べても、バージョンの違いによる仕様変更が激しいようです。
   そこまで核となるような事はしていないと思いますが、気を付けてください。
